--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-    <title>EnzoFragaflix</title>
+    <title>Arantesflix</title>
 </head>
 
 <body>
-    <header>EnzoFragaFLIX</header>
+    <header>ArantesFLIX</header>
     <section class="chamada">
         <div class="chamada-texto">
             <H1>ATRAVÉS DO ARANHAVERSO</H1>
